--- a/src/views/partial-assets.ejs
+++ b/src/views/partial-assets.ejs
@@ -8,3 +8,4 @@
 
 <script type="text/javascript" src="assets/CenitIO/js/select2.min.js"></script>
 <script type="text/javascript" src="assets/CenitIO/js/Controller.js"></script>
+<script type="text/javascript" src="assets/CenitIO/js/signature_pad.min.js"></script>
