--- a/src/public/assets/CenitIO/css/main.css
+++ b/src/public/assets/CenitIO/css/main.css
@@ -19,3 +19,52 @@
     border: 1px inset lightgrey;
     overflow: hidden;
 }
+
+#signature, #signature canvas, #signature .actions {
+    background-color: white;
+    border: 1px solid lightgrey;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#signature {
+    display: none;
+    position: absolute;
+    height: 80%;
+    width: 90%;
+    top: 10%;
+    left: 5%;
+    padding: 5px;
+    z-index: 1000;
+    border-color: gray;
+}
+
+#signature canvas {
+    width: 100%;
+    height: calc(100% - 44px);
+}
+
+#signature .actions {
+    width: 100%;
+    height: 39px;
+}
+
+#signature .actions button {
+    margin: 0px 10px;
+}
+
+#signature .actions {
+    padding: 2px 20px;
+}
+
+#clear {
+    float: left;
+}
+
+#save, #cancel {
+    float: right;
+}
+
+img.signature {
+    height: 34px;
+}
